Tmux config tweaks
Start numbering at 1, adjust colour scheme to match nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,5 @@
 bind-key -r f run-shell "tmux neww ~/.dotfiles/bin/tmux-sessionizer"
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g status-style bg=#3c4261,fg=#a8b1d6
