--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
 bind-key -r f run-shell "tmux neww ~/.dotfiles/bin/tmux-sessionizer"
 
+# Make nvim happy
+set -s escape-time 0
+set-option -g focus-events on
+
 set -g base-index 1
 setw -g pane-base-index 1
 
