Enable tmux vi mode and copy support

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,3 +10,7 @@ setw -g pane-base-index 1
 set -g status-style bg=#3c4261,fg=#a8b1d6
 
 set-option -g detach-on-destroy off
+
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
